new_tests/semantics/type/bad/088_ARRAYLITERAL_5.cm
/*
    Type Error 460

    1| def a:Array[Array[Int]] = Array(Array(1,2,3),Array(4,5))
    The size of the multidimensional array is unknown.
*/

def a:Array[Array[Int]] = Array(Array(1,2,3),Array(4,5))
